...
                                        <color key="shadowColor" red="0.84313725490000002" green="0.59999999999999998" blue="0.1333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <size key="shadowOffset" width="2" height="3"/>
                                    </label>
                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="RqE-28-j2H">
                                        <rect key="frame" x="0.0" y="65" width="354" height="32"/>
                                        <segments>
                                            <segment title="Sign Up"/>
                                            <segment title="Sign In"/>
                                        </segments>
                                        <connections>
                                            <action selector="signInTypeChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="8uA-Uf-ye7"/>
                                        </connections>
                                    </segmentedControl>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="beA-TK-rxU">
                                        <rect key="frame" x="0.0" y="114" width="354" height="132"/>
                                        <subviews>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Rmu-Q4-xzC" userLabel="username">
                                                <rect key="frame" x="0.0" y="0.0" width="354" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="username" label="username"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UdO-dX-YIn" userLabel="password">
                                                <rect key="frame" x="0.0" y="46" width="354" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="password" label="password"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DBu-A4-xnp" userLabel="signUp">
...
